plaid images and text

--- a/plaid.html
+++ b/plaid.html
@@ -20,12 +20,12 @@ limitations under the License.
 
 <head>
   <meta charset="utf-8">
-  <title>TEA</title>
+  <title>Plaid</title>
   <link rel="canonical" href="https://www.minnowspace.com/amazon.html">
   <meta name="viewport" content="width=device-width">
   <meta name="amp-google-client-id-api" content="googleanalytics">
   <meta name="description"
-    content="Tea - MINNOWSPACE is a communal website that encourages decentralized ownership and a shared economy.">
+    content="Plaid - Amazon links for plaid shirts - MINNOWSPACE is a communal website that encourages decentralized ownership and a shared economy.">
   <meta name="keywords"
     content="MINNOWSPACE, MINNOW, SPACE, COMMUNITY, COMMUNAL, DECENTRALIZED, SHARED, ECONOMY, WEBSITE, WEB, PAGE, PAGES, INTERNET, ONLINE, PLATFORM, PLATFORMS, SOCIAL, MEDIA, SOCIAL MEDIA, SOCIAL PLATFORM, SOCIAL PLATFORMS, SOCIAL MEDIA PLATFORM">
   <meta name="author" content="MINNOWSPACE">
@@ -2436,18 +2436,26 @@ limitations under the License.
       style="background-image:url(./img/plaid/d6mxwh6-ff14427e-8e59-4ed2-b421-78306032ed22.png); background-size:cover; background-position:center; background-repeat:no-repeat; color:rgb(0, 0, 0); height:6.5rem; line-height:3.5rem; text-align:center; text-decoration:none; display:block; border-radius:2em; font-size:1.5rem">
       Click Here For Amazing Plaid on Amazon!
     </a>
+    <br>
     <article class="px3">
       <h2 id="story" class="my4 theme2-anchored">We've Gone Plaid!</h2>
 
 
-      <p class="mb1 ampstart-dropcap">Columbia Plaid Shirts for Men https://amzn.to/3VJA1jc</p>
-      <p class="mb1">
-        Carhartt Plaid Shirts for Men https://amzn.to/4flohtS </p>
 
       <p class="mb1">
-        DXL Plaid Shirts for Men https://amzn.to/4flohtS
-
+        You know the look, <a href="https://amzn.to/4flohtS">a Carhartt flannel plaid shirt</a>, You could be in
+        Vermont, and the Pacific Northwest, Oklahoma, upstate New York City. But these days its also Manhattan, high
+        fashion, Beverly Hills. Its a
+        southerner waiting patiently until the end of fall to wear their favorite flannel and still be too warm out to
+        wear it, but you do anyway cause you sure couldn't wear it in July. Its the Californians taking
+        the 405. Throw some gingham plaid in there and you are the old money on Cape Cod. Insert your hometown here. Its
+        Canada and the Alps. The 90s called, said we were slackers and we didn't wear enough plaid. It's grunge, Gen X,
+        their parents & their kids, counter culture, hipsters,
+        normies, its all of us. They are a versatile piece of clothing that can be dressed up
+        or down, worn with jeans or khakis, and layered with a sweater or jacket. Plaid shirts are a timeless classic
       </p>
+
+
 
       <p class="mb1">Plaid shirts: the timeless wardrobe staple that embodies comfort, style, and rugged charm. There’s
         something about the
@@ -2461,53 +2469,30 @@ limitations under the License.
       <h2 id="gallery" class="my4 theme2-anchored">Photo Gallery</h2>
       <amp-image-lightbox id="lightbox" layout="nodisplay"></amp-image-lightbox>
       <amp-carousel class="my2 mxn3" height="200" layout="fixed-height" type="carousel">
-        <amp-img src="./img/plaid/pexels-carolinoportraits-2914286.jpg" width="300" height="200" alt="Dining area"
-          on="tap:lightbox" role="button" tabindex="0"></amp-img>
+        <amp-img src="./img/plaid/pexels-carolinoportraits-2914286.jpg" width="300" height="200"
+          alt="Woman wearing cool plaid shirt" on="tap:lightbox" role="button" tabindex="0"></amp-img>
         <amp-img src="./img/plaid/p1.jpg" width="300" height="200" alt="Pumpkin Soup" on="tap:lightbox" role="button"
           tabindex="0"></amp-img>
-              <amp-img src="./img/plaid/pexels-jenyzest-3563941.jpg" width="300" height="200" alt="Pumpkin Soup" on="tap:lightbox"
-                role="button" tabindex="0"></amp-img>
+        <amp-img src="./img/plaid/pexels-jenyzest-3563941.jpg" width="300" height="200" alt="Two guys wearing plaid"
+          on="tap:lightbox" role="button" tabindex="0"></amp-img>
+        <amp-img src="./img/plaid/p8.jpg" width="300" height="200" alt="Pumpkin Soup" on="tap:lightbox" role="button"
+          tabindex="0"></amp-img>
 
-        <amp-img src="./img/plaid/p3.jpg" width="300" height="200" alt="Pumpkin Soup" on="tap:lightbox" role="button"
+        <amp-img src="./img/plaid/p3.jpg" width="133" height="200" alt="Woman wearing plaid" on="tap:lightbox"
+          role="button" tabindex="0"></amp-img>
+        <amp-img src="./img/plaid/p19.jpg" width="300" height="200" alt="Pumpkin Soup" on="tap:lightbox" role="button"
           tabindex="0"></amp-img>
         <amp-img src="./img/plaid/p4.jpg" width="300" height="200" alt="Pumpkin Soup" on="tap:lightbox" role="button"
           tabindex="0"></amp-img>
-        <amp-img src="./img/plaid/p5.jpg" width="300" height="200" alt="Pumpkin Soup" on="tap:lightbox" role="button"
-          tabindex="0"></amp-img>
-        <amp-img src="./img/plaid/p6.jpg" width="300" height="200" alt="Pumpkin Soup" on="tap:lightbox" role="button"
-          tabindex="0"></amp-img>
-        <amp-img src="./img/plaid/p7.jpg" width="300" height="200" alt="Pumpkin Soup" on="tap:lightbox" role="button"
-          tabindex="0"></amp-img>
-        <amp-img src="./img/plaid/p8.jpg" width="300" height="200" alt="Pumpkin Soup" on="tap:lightbox" role="button"
+
+        <amp-img src="./img/plaid/p14.jpg" width="300" height="200" alt="Pumpkin Soup" on="tap:lightbox" role="button"
           tabindex="0"></amp-img>
         <amp-img src="./img/plaid/p9.jpg" width="300" height="200" alt="Pumpkin Soup" on="tap:lightbox" role="button"
           tabindex="0"></amp-img>
-        <amp-img src="./img/plaid/p10.jpg" width="300" height="200" alt="Pumpkin Soup" on="tap:lightbox" role="button"
+        <amp-img src="./img/plaid/p18.jpg" width="300" height="200" alt="Pumpkin Soup" on="tap:lightbox" role="button"
           tabindex="0"></amp-img>
         <amp-img src="./img/plaid/p11.jpg" width="300" height="200" alt="Pumpkin Soup" on="tap:lightbox" role="button"
           tabindex="0"></amp-img>
-        <amp-img src="./img/plaid/p12.jpg" width="300" height="200" alt="Pumpkin Soup" on="tap:lightbox" role="button"
-          tabindex="0"></amp-img>
-        <amp-img src="./img/plaid/p13.jpg" width="300" height="200" alt="Pumpkin Soup" on="tap:lightbox" role="button"
-          tabindex="0"></amp-img>
-        <amp-img src="./img/plaid/p14.jpg" width="300" height="200" alt="Pumpkin Soup" on="tap:lightbox" role="button"
-          tabindex="0"></amp-img>
-        <amp-img src="./img/plaid/p15.jpg" width="300" height="200" alt="Pumpkin Soup" on="tap:lightbox" role="button"
-          tabindex="0"></amp-img>
-        <amp-img src="./img/plaid/p16.jpg" width="300" height="200" alt="Pumpkin Soup" on="tap:lightbox" role="button"
-          tabindex="0"></amp-img>
-        <amp-img src="./img/plaid/p17.jpg" width="300" height="200" alt="Pumpkin Soup" on="tap:lightbox" role="button"
-          tabindex="0"></amp-img>
-        <amp-img src="./img/plaid/p18.jpg" width="300" height="200" alt="Pumpkin Soup" on="tap:lightbox" role="button"
-          tabindex="0"></amp-img>
-        <amp-img src="./img/plaid/p19.jpg" width="300" height="200" alt="Pumpkin Soup" on="tap:lightbox" role="button"
-          tabindex="0"></amp-img>
-        <amp-img src="./img/plaid/p20.jpg" width="300" height="200" alt="Pumpkin Soup" on="tap:lightbox" role="button"
-          tabindex="0"></amp-img>
-        <amp-img src="./img/plaid/p21.jpg" width="300" height="200" alt="Pumpkin Soup" on="tap:lightbox" role="button"
-          tabindex="0"></amp-img>
-    
-        
       </amp-carousel>
 
       <p class="mb1">
@@ -2518,9 +2503,25 @@ limitations under the License.
         where cabins nestled in the mountains, with canoes resting on the shores, set the stage for rugged escapades.
         Plaid
         shirts are a nod to that outdoorsy spirit, a connection to nature and simpler times.</p>
-      <a href="https://amzn.to/3VJA1jc">
-        <img src="./img/plaid/plaidman.png" width="285" height="285" alt="" border="0" style="border-radius:2em" />click
-        me for stunning plaid</a>
+      <figure class="ampstart-image-with-heading  m0 relative mb4">
+        <a href="https://amzn.to/3VJA1jc" target="_blank">
+
+          <amp-img src="./img/plaid/plaidman.png" width="285" height="285"
+            alt="Dude with a beard wearing sunglasses and plaid" layout="responsive"
+            style="border-radius:2rem;"></amp-img>
+        </a>
+        <figcaption class="absolute right-0 bottom-0 left-0">
+          <header class="ampstart-image-heading px2 py2 line-height-4">
+            <h2 class="h3 bold"></h2><a href="https://amzn.to/3VJA1jc" target="_blank">
+              <p class="h4" style>Click Me for some fashion forward plaid</p>
+            </a>
+          </header>
+        </figcaption>
+      </figure>
+
+
+
+
       <p class="mb1">
         And let’s face it: guys look undeniably hunky in plaid. There’s a magnetic confidence that comes with wearing a
         shirt
@@ -2531,9 +2532,22 @@ limitations under the License.
         him—not just because it’s stylish and comfortable, but because it says something about you, the gift-giver. It’s
         a
         thoughtful choice, brimming with personality, and it’ll stand out in his closet for years to come.</p>
-      <a href="https://amzn.to/4gAIWLz">
-        <img src="./img/plaid/pexels-giannekarla-58592.jpg" width="285" height="190" alt="" border="0"
-          style="border-radius:2em" />click me for women's plaid shirts</a>
+
+      <figure class="ampstart-image-with-heading  m0 relative mb4">
+        <a href="https://amzn.to/3ZIiqJs" target="_blank">
+
+          <amp-img src="./img/plaid/pexels-giannekarla-58592.jpg" width="285" height="190" alt="Two women wearing plaid"
+            layout="responsive" style="border-radius:2rem;"></amp-img>
+        </a>
+        <figcaption class="absolute right-0 bottom-0 left-0">
+          <header class="ampstart-image-heading px2 py2 line-height-4">
+            <h2 class="h3 bold"></h2><a href="https://amzn.to/3ZIiqJs" target="_blank">
+              <p class="h4" style>Click Me for some fashion forward plaid</p>
+            </a>
+          </header>
+        </figcaption>
+      </figure>
+
       <p class="mb1">
         For women, plaid shirts are just as versatile and appealing. Whether worn oversized with leggings for a
         laid-back look
@@ -2544,11 +2558,24 @@ limitations under the License.
         flannel combined with the classic plaid pattern makes these shirts a go-to choice for outdoor adventures or cozy
         nights
         in.</p>
-      <a href="https://amzn.to/3ZIiqJs">
-        <img src="./img/plaid/pexels-dajana-reci-289671698-16643767.jpg" width="300" height="300" alt="" border="0"
-          style="border-radius:2em" />click here for fashion forward plaid!</a>
-      <p class="mb1">
-      <p class="mb1">
+
+
+      <figure class="ampstart-image-with-heading  m0 relative mb4">
+        <a href="https://amzn.to/4gAIWLz" target="_blank">
+
+          <amp-img src="./img/plaid/pexels-dajana-reci-289671698-16643767.jpg" width="300" height="300"
+            alt="Woman walking in a green valley with mountains in the background" layout="responsive"
+            style="border-radius:2rem;"></amp-img>
+        </a>
+        <figcaption class="absolute right-0 bottom-0 left-0">
+          <header class="ampstart-image-heading px2 py2 line-height-4">
+            <h2 class="h3 bold"></h2><a href="https://amzn.to/4gAIWLz" target="_blank">
+              <p class="h4" style>Click Me for some outdoorsy plaid</p>
+            </a>
+          </header>
+        </figcaption>
+      </figure>
+
       <p class="mb1">
         Plaid shirts also make a great fashion statement when paired with boots and a scarf, embodying a chic yet
         practical
@@ -2565,11 +2592,22 @@ limitations under the License.
         fit or comfort—and often both. Too short, and your shirt starts to creep up toward your belly button. Too tight,
         and
         suddenly your rugged look feels more like you’re about to burst out of your clothes.</p>
-            <figure class="ampstart-image-with-heading  m0 relative mb4">
-      <a href="https://amzn.to/4flohtS">
-        <img src="./img/plaid/d2qv53d-c3d0fa99-c4d9-4694-ad43-007086f850ab.jpg" width="300" height="300" alt=""
-          border="0" style="border-radius:2em" />click me for big & tall flannel!</a>
+
+      <figure class="ampstart-image-with-heading  m0 relative mb4">
+        <a href="https://amzn.to/3Dn86iM">
+
+          <amp-img src="./img/plaid/d2qv53d-c3d0fa99-c4d9-4694-ad43-007086f850ab.jpg" width="300" height="300"
+            alt="Big Guy" layout="responsive" style="border-radius:2rem;"></amp-img>
+        </a>
+        <figcaption class="absolute right-0 bottom-0 left-0">
+          <header class="ampstart-image-heading px2 py2 line-height-4">
+            <h2 class="h3 bold"></h2><a href="https://amzn.to/3Dn86iM">
+              <p class="h4" style="color:black">Click Me to Find Some Amazing Big & Tall Plaid!</p>
+            </a>
+          </header>
+        </figcaption>
       </figure>
+
       <p class="mb1">
         As a big and tall guy myself, I can tell you: the average shirt just doesn’t cut it. I’ve spent more time than I
         care to
@@ -2587,15 +2625,15 @@ limitations under the License.
         channeling that
         rugged, outdoorsy energy while staying warm, comfortable, and effortlessly stylish.</p>
       <figure class="ampstart-image-with-heading  m0 relative mb4">
-        <a href="https://amzn.to/4flohtS">
+        <a href="https://amzn.to/3VJA1jc">
 
-          <amp-img src="./img/plaid/11884158495_6136a39fba_b.jpg" width="600" height="450"
-            alt="Lumberjack" layout="responsive"></amp-img>
+          <amp-img src="./img/plaid/11884158495_6136a39fba_b.jpg" width="600" height="450" alt="Lumberjack"
+            layout="responsive"></amp-img>
         </a>
         <figcaption class="absolute right-0 bottom-0 left-0">
           <header class="ampstart-image-heading px2 py2 line-height-4">
-            <h2 class="h3 bold">Follow the Link to Find Some Amazing Plaid!</h2><a href="https://amzn.to/4flohtS">
-              <p class="h4">Click Me!</p>
+            <h2 class="h3 bold"></h2><a href="https://amzn.to/3VJA1jc">
+              <p class="h4">Click Me to Find Some Amazing Plaid!</p>
             </a>
           </header>
         </figcaption>
