--- a/chocolat.html
+++ b/chocolat.html
@@ -2396,9 +2396,9 @@ limitations under the License.
 
     <!-- Start Fullpage Hero -->
     <figure class="ampstart-image-fullpage-hero m0 relative mb4">
-      <amp-img width="404" height="720" alt="Welcome to Beck &amp; Galo Modern American Cuisine" layout="responsive"
+      <amp-img width="404" height="720" alt="Welcome to the Chocolat Page" layout="responsive"
         src="./img/tea/pexels-minan1398-1624554.webp" media="(max-width: 415px)"></amp-img>
-      <amp-img height="720" alt="Welcome to Your &amp; Lets sell!" layout="fixed-height"
+      <amp-img height="720" alt="Welcome to the Chocolat page" layout="fixed-height"
         src="./img/tea/pexels-minan1398-1624554.webp" media="(min-width: 416px)"></amp-img>
       <figcaption class="absolute top-0 right-0 bottom-0 left-0">
         <header class="p3">
@@ -2414,7 +2414,7 @@ limitations under the License.
         </header>
         <footer class="absolute left-0 right-0 bottom-0">
           <a href="https://www.kqzyfj.com/click-101316119-11430556">
-            <img src="https://www.ftjcfx.com/image-101316119-11430556" width="300" height="250" alt="" border="0" /></a>
+            <img src="https://www.ftjcfx.com/image-101316119-11430556" width="300" height="250" alt="glass of iced tea" border="0" /></a>
 
         </footer>
       </figcaption>
@@ -2441,7 +2441,7 @@ limitations under the License.
         ocean, creating moments that felt like pure inspiration. It's a real Boston tea party up in there.</p>
       <a href="https://www.kqzyfj.com/click-101316119-11430556">
 
-        <img src="./img/tea/pexels-pixabay-460257.webp" width="300" height="250" alt="" border="0" /></a>
+        <img src="./img/tea/pexels-pixabay-460257.webp" width="300" height="250" alt="woman drinking tea" border="0" /></a>
       <p class="mb1">
         In the winter, there's nothing better than a steaming cup of gourmet tea to warm you up on a chilly day or to
         reset and
