--- a/coffee.html
+++ b/coffee.html
@@ -2396,9 +2396,9 @@ limitations under the License.
 
     <!-- Start Fullpage Hero -->
     <figure class="ampstart-image-fullpage-hero m0 relative mb4">
-      <amp-img width="404" height="720" alt="Welcome to Beck &amp; Galo Modern American Cuisine" layout="responsive"
+      <amp-img width="404" height="720" alt="Welcome to coffee wonderland" layout="responsive"
         src="./img/coffee/pexels-adam-lukac-254247-773958.jpg" media="(max-width: 415px)"></amp-img>
-      <amp-img height="720" alt="Welcome to Your &amp; Lets sell!" layout="fixed-height"
+      <amp-img height="720" alt="coffee beans" layout="fixed-height"
         src="./img/coffee/pexels-adam-lukac-254247-773958.jpg" media="(min-width: 416px)"></amp-img>
       <figcaption class="absolute top-0 right-0 bottom-0 left-0">
         <header class="p3">
