--- a/tea.html
+++ b/tea.html
@@ -21,7 +21,7 @@ limitations under the License.
 <head>
   <meta charset="utf-8">
   <title>TEA</title>
-  <link rel="canonical" href="https://www.minnowspace.com/tea">
+  <link rel="canonical" href="https://www.minnowspace.com/tea.html">
   <meta name="viewport" content="width=device-width">
   <meta name="amp-google-client-id-api" content="googleanalytics">
   <meta name="description"
