--- a/index.html
+++ b/index.html
@@ -3356,7 +3356,9 @@ limitations under the License.
   <!-- Google Tag Manager-->
   <amp-analytics config="https://www.googletagmanager.com/amp.json?id=GTM-5VTXDGGN&gtm.url=SOURCE_URL"
     data-credentials="include"></amp-analytics>
-
+  <amp-analytics config="https://www.googletagmanager.com/amp.json?id= GT-KVMBLSP4&gtm.url=SOURCE_URL"
+    data-credentials="include"></amp-analytics>
+  
   <!-- Google Tag Manager -->
   <!---->
   <amp-analytics type="gtag" data-credentials="include">
@@ -3372,11 +3374,15 @@ limitations under the License.
         "G-V3TNNSX3H4": {
           "groups": "default"
         },
-           "gtag_id": "G-PHX4D1D223",
+           "gtag_id": "G-PHX4D1D223": {
+            "groups": "default"
+            },
       
         "G-PHX4D1D223": {
           "groups": "default"
-        }
+        },
+         "GT-KVMBLSP4":{ 
+          "groups": "default"}
       }
     },
   
