--- a/index.html
+++ b/index.html
@@ -3357,9 +3357,8 @@ limitations under the License.
   <!-- Google Tag Manager-->
   <amp-analytics config="https://www.googletagmanager.com/amp.json?id=GTM-5VTXDGGN&gtm.url=SOURCE_URL"
     data-credentials="include"></amp-analytics>
-  <amp-analytics config="https://www.googletagmanager.com/amp.json?id= GT-KVMBLSP4&gtm.url=SOURCE_URL"
-    data-credentials="include"></amp-analytics>
-  
+
+
   <!-- Google Tag Manager -->
   <!---->
   <amp-analytics type="gtag" data-credentials="include">
@@ -3371,10 +3370,7 @@ limitations under the License.
         "G-V3TNNSX3H4": {
           "groups": "default"
         },
-             "gtag_id": "GTM-5VTXDGGN",
-        "G-V3TNNSX3H4": {
-          "groups": "default"
-        },
+
            "gtag_id": "G-PHX4D1D223": {
             "groups": "default"
             },
@@ -3403,6 +3399,20 @@ limitations under the License.
   }
   }
   </script>
+  </amp-analytics>
+  <amp-analytics type="gtag" data-credentials="include">
+    <script type="application/json">
+    {
+      "vars": {
+        "gtag_id": "G-PHX4D1D223",
+        "config": {
+          "G-PHX4D1D223": {
+            "groups": "default"
+          }}
+        }
+      }
+    }
+    </script>
   </amp-analytics>
 
 
