--- a/plaid.html
+++ b/plaid.html
@@ -603,6 +603,7 @@ limitations under the License.
     .mb1 {
       margin-bottom: .5rem;
       background-color: #000;
+      font-size: 1.4rem;
     }
 
     .ml1,
@@ -2443,21 +2444,11 @@ limitations under the License.
 
 
       <p class="mb1">
-        You know the look, <a href="https://amzn.to/4flohtS">a Carhartt flannel plaid shirt</a>, You could be in
-        Vermont, and the Pacific Northwest, Oklahoma, upstate New York City. But these days its also Manhattan, high
-        fashion, Beverly Hills. Its a
-        southerner waiting patiently until the end of fall to wear their favorite flannel and still be too warm out to
-        wear it, but you do anyway cause you sure couldn't wear it in July. Its the Californians taking
-        the 405. Throw some gingham plaid in there and you are the old money on Cape Cod. Insert your hometown here. Its
-        Canada and the Alps. The 90s called, said we were slackers and we didn't wear enough plaid. It's grunge, Gen X,
-        their parents & their kids, counter culture, hipsters,
-        normies, its all of us. They are a versatile piece of clothing that can be dressed up
-        or down, worn with jeans or khakis, and layered with a sweater or jacket. Plaid shirts are a timeless classic
-      </p>
+        
 
 
-
-      <p class="mb1">Plaid shirts: the timeless wardrobe staple that embodies comfort, style, and rugged charm. There’s
+      <p class="mb1">
+        <a href="https://amzn.to/4flohtS">Plaid shirts:</a> the timeless wardrobe staple that embodies comfort, style, and rugged charm. There’s
         something about the
         cozy embrace of a plaid flannel shirt that feels like a warm hug on a crisp day. Whether layered over a tee or
         buttoned
