--- a/index.html
+++ b/index.html
@@ -3837,7 +3837,7 @@ limitations under the License.
         </ul>
       </div>
       <div class="sm-col sm-col-3 col-6 right-align">
-        <a href="#" class="land-see-next-page mt2 mr2 inline-block relative">Next Story</a>
+        <a href="https://minnowspace.com/stories.amp.html" class="land-see-next-page mt2 mr2 inline-block relative">Next Story</a>
       </div>
     </div>
   </section>
