--- a/index.html
+++ b/index.html
@@ -3667,7 +3667,92 @@ limitations under the License.
       vision is to create a thriving digital ecosystem where brands, creators, and audiences all find value.</p>
     <p class="land-see-story-copy max-width-3 mx-auto py2 px4">
       Join us on this journey and stay tuned for exciting developments. Together, we’re building something
-      extraordinary..
+      extraordinary..</p>
+  <section class="land-see-story-nav mx-auto center px1 relative z2">
+    <div class="land-see-paging land-see-page-navigation mb4 flex flex-wrap">
+      <div class="sm-col sm-col-3 col-6 left-align">
+      <!--  <a href="#" class="land-see-prev-page mt2 ml2 inline-block relative"></a>-->
+      </div>
+      <div class="land-see-story-social flex flex-auto align-top pt1 justify-center">
+        <h3 class="land-see-story-social-share-heading">social:</h3>
+        <ul class="ampstart-social-follow list-reset flex justify-around items-center flex-wrap m0 mb4">
+          <li>
+            <a href="https://www.tiktok.com/@minnowspace" target="_blank" class="inline-block p1"
+              aria-label="Link to AMP HTML TikTok"><amp-img src="./img/land-see/content/tiktok.webp" width="24"
+                height="23.6" layout="fixed">
+                <title>TikTok</title>
+              </amp-img>
+            </a>
+          </li>
+          <li>
+            <a href="https://x.com/minnowspace" target="_blank" class="inline-block p1"
+              aria-label="Link to AMP HTML Twitter"><svg xmlns="http://www.w3.org/2000/svg" width="24" height="22.2"
+                viewBox="0 0 53 49">
+                <title>Twitter</title>
+                <path
+                  d="M45 6.9c-1.6 1-3.3 1.6-5.2 2-1.5-1.6-3.6-2.6-5.9-2.6-4.5 0-8.2 3.7-8.2 8.3 0 .6.1 1.3.2 1.9-6.8-.4-12.8-3.7-16.8-8.7C8.4 9 8 10.5 8 12c0 2.8 1.4 5.4 3.6 6.9-1.3-.1-2.6-.5-3.7-1.1v.1c0 4 2.8 7.4 6.6 8.1-.7.2-1.5.3-2.2.3-.5 0-1 0-1.5-.1 1 3.3 4 5.7 7.6 5.7-2.8 2.2-6.3 3.6-10.2 3.6-.6 0-1.3-.1-1.9-.1 3.6 2.3 7.9 3.7 12.5 3.7 15.1 0 23.3-12.6 23.3-23.6 0-.3 0-.7-.1-1 1.6-1.2 3-2.7 4.1-4.3-1.4.6-3 1.1-4.7 1.3 1.7-1 3-2.7 3.6-4.6"
+                  class="ampstart-icon ampstart-icon-twitter"></path>
+              </svg></a>
+          </li>
+  
+          <li>
+            <a href="mailto:bcebel@gmail.com" target="_blank" class="inline-block p1"
+              aria-label="Link to AMP HTML E-mail"><svg xmlns="http://www.w3.org/2000/svg" width="24" height="18.4"
+                viewBox="0 0 56 43">
+                <title>email</title>
+                <path
+                  d="M10.5 6.4C9.1 6.4 8 7.5 8 8.9v21.3c0 1.3 1.1 2.5 2.5 2.5h34.9c1.4 0 2.5-1.2 2.5-2.5V8.9c0-1.4-1.1-2.5-2.5-2.5H10.5zm2.1 2.5h30.7L27.9 22.3 12.6 8.9zm-2.1 1.4l16.6 14.6c.5.4 1.2.4 1.7 0l16.6-14.6v19.9H10.5V10.3z"
+                  class="ampstart-icon ampstart-icon-email"></path>
+              </svg></a>
+          </li>
+        </ul>
+      </div>
+      <div class="sm-col sm-col-3 col-6 right-align">
+        <a href="https://minnowspace.com/stories.amp.html" class="land-see-next-page mt2 mr2 inline-block relative">Next
+          Story</a>
+      </div>
+    </div>
+  </section>
+
+      
+        <section class="land-see-entertainment-content mx-auto">
+          <h4 class="land-see-section-header ml1">Recommended</h4>
+          <div class="clearfix pt2">
+            <amp-list class="center justify-center" src="./api/recommended.json" height="460" layout="fixed-height">
+              <template type="amp-mustache">
+                <amp-position-observer on="enter:recommendedSlideIn.start" layout="nodisplay">
+                </amp-position-observer>
+                {{#land-see-category}}
+                <amp-carousel media="{{media-query}}" width="{{width}}" height="{{height}}" layout="{{layout}}" controls=""
+                  type="slides">
+                  {{#story-slide}}
+                  <div class="land-see-story-slide flex">
+                    {{#story-post}}
+                    <div class="mx1 col align-top {{post-classes}}">
+                      <a href="{{post-url}}" class="text-decoration-none">
+                        {{#image}}
+                        <amp-img class="land-see-post-image {{classes}}" alt="{{alt}}" media="{{media-query}}" width="{{width}}"
+                          height="{{height}}" layout="{{layout}}" src="{{src}}">
+                        </amp-img>
+                        {{/image}}
+                      </a>
+                      <a class="land-see-post-category land-see-page-navigation inline-block pt1 underline caps"
+                        href="{{post-category-url}}">{{post-category}}</a>
+                      <h4 class="land-see-post-title ampstart-title-sm pt1">
+                        <a class="text-decoration-none" href="{{post-url}}">{{post-title}}</a>
+                      </h4>
+                      <p class="ampstart-caption pt1 pb3">{{post-copy}}</p>
+                    </div>
+                    {{/story-post}}
+                  </div>
+                  {{/story-slide}}
+                </amp-carousel>
+                {{/land-see-category}}
+              </template>
+            </amp-list>
+          </div>
+        </section>
+
     <div class="land-see-flying-carpet display-none">
       <amp-fx-flying-carpet height="300px">
         <amp-img alt="Minnowspace" class="cover" width="704" height="598" layout="fixed"
@@ -3797,88 +3882,7 @@ limitations under the License.
     </div>
   </section>
 
-  <section class="land-see-story-nav mx-auto center px1 relative z2">
-    <div class="land-see-paging land-see-page-navigation mb4 flex flex-wrap">
-      <div class="sm-col sm-col-3 col-6 left-align">
-        <a href="#" class="land-see-prev-page mt2 ml2 inline-block relative">Previous Story</a>
-      </div>
-      <div class="land-see-story-social flex flex-auto align-top pt1 justify-center">
-        <h3 class="land-see-story-social-share-heading">social:</h3>
-        <ul class="ampstart-social-follow list-reset flex justify-around items-center flex-wrap m0 mb4">
-          <li>
-            <a href="https://www.tiktok.com/@minnowspace" target="_blank" class="inline-block p1"
-              aria-label="Link to AMP HTML TikTok"><amp-img src="./img/land-see/content/tiktok.webp" width="24"
-                height="23.6" layout="fixed">
-                <title>TikTok</title>
-              </amp-img>
-            </a>
-          </li>
-          <li>
-            <a href="https://x.com/minnowspace" target="_blank" class="inline-block p1"
-              aria-label="Link to AMP HTML Twitter"><svg xmlns="http://www.w3.org/2000/svg" width="24" height="22.2"
-                viewBox="0 0 53 49">
-                <title>Twitter</title>
-                <path
-                  d="M45 6.9c-1.6 1-3.3 1.6-5.2 2-1.5-1.6-3.6-2.6-5.9-2.6-4.5 0-8.2 3.7-8.2 8.3 0 .6.1 1.3.2 1.9-6.8-.4-12.8-3.7-16.8-8.7C8.4 9 8 10.5 8 12c0 2.8 1.4 5.4 3.6 6.9-1.3-.1-2.6-.5-3.7-1.1v.1c0 4 2.8 7.4 6.6 8.1-.7.2-1.5.3-2.2.3-.5 0-1 0-1.5-.1 1 3.3 4 5.7 7.6 5.7-2.8 2.2-6.3 3.6-10.2 3.6-.6 0-1.3-.1-1.9-.1 3.6 2.3 7.9 3.7 12.5 3.7 15.1 0 23.3-12.6 23.3-23.6 0-.3 0-.7-.1-1 1.6-1.2 3-2.7 4.1-4.3-1.4.6-3 1.1-4.7 1.3 1.7-1 3-2.7 3.6-4.6"
-                  class="ampstart-icon ampstart-icon-twitter"></path>
-              </svg></a>
-          </li>
 
-          <li>
-            <a href="mailto:bcebel@gmail.com" target="_blank" class="inline-block p1"
-              aria-label="Link to AMP HTML E-mail"><svg xmlns="http://www.w3.org/2000/svg" width="24" height="18.4"
-                viewBox="0 0 56 43">
-                <title>email</title>
-                <path
-                  d="M10.5 6.4C9.1 6.4 8 7.5 8 8.9v21.3c0 1.3 1.1 2.5 2.5 2.5h34.9c1.4 0 2.5-1.2 2.5-2.5V8.9c0-1.4-1.1-2.5-2.5-2.5H10.5zm2.1 2.5h30.7L27.9 22.3 12.6 8.9zm-2.1 1.4l16.6 14.6c.5.4 1.2.4 1.7 0l16.6-14.6v19.9H10.5V10.3z"
-                  class="ampstart-icon ampstart-icon-email"></path>
-              </svg></a>
-          </li>
-        </ul>
-      </div>
-      <div class="sm-col sm-col-3 col-6 right-align">
-        <a href="https://minnowspace.com/stories.amp.html" class="land-see-next-page mt2 mr2 inline-block relative">Next Story</a>
-      </div>
-    </div>
-  </section>
-
-  <section class="land-see-entertainment-content mx-auto">
-    <h4 class="land-see-section-header ml1">Recommended</h4>
-    <div class="clearfix pt2">
-      <amp-list class="center justify-center" src="./api/recommended.json" height="460" layout="fixed-height">
-        <template type="amp-mustache">
-          <amp-position-observer on="enter:recommendedSlideIn.start" layout="nodisplay">
-          </amp-position-observer>
-          {{#land-see-category}}
-          <amp-carousel media="{{media-query}}" width="{{width}}" height="{{height}}" layout="{{layout}}" controls=""
-            type="slides">
-            {{#story-slide}}
-            <div class="land-see-story-slide flex">
-              {{#story-post}}
-              <div class="mx1 col align-top {{post-classes}}">
-                <a href="{{post-url}}" class="text-decoration-none">
-                  {{#image}}
-                  <amp-img class="land-see-post-image {{classes}}" alt="{{alt}}" media="{{media-query}}"
-                    width="{{width}}" height="{{height}}" layout="{{layout}}" src="{{src}}">
-                  </amp-img>
-                  {{/image}}
-                </a>
-                <a class="land-see-post-category land-see-page-navigation inline-block pt1 underline caps"
-                  href="{{post-category-url}}">{{post-category}}</a>
-                <h4 class="land-see-post-title ampstart-title-sm pt1">
-                  <a class="text-decoration-none" href="{{post-url}}">{{post-title}}</a>
-                </h4>
-                <p class="ampstart-caption pt1 pb3">{{post-copy}}</p>
-              </div>
-              {{/story-post}}
-            </div>
-            {{/story-slide}}
-          </amp-carousel>
-          {{/land-see-category}}
-        </template>
-      </amp-list>
-    </div>
-  </section>
 
 
   <!-- End Input-->
