cleanup old links

--- a/drones.html
+++ b/drones.html
@@ -2427,8 +2427,8 @@ limitations under the License.
   </div>
 
   <main id="content" role="main">
-    <a href="https://amzn.to/3BC6FMF"
-      style="background-image:url(./img/drones/d6mxwh6-ff14427e-8e59-4ed2-b421-78306032ed22.png); background-size:cover; background-position:center; background-repeat:no-repeat; color:rgb(0, 0, 0); height:6.5rem; line-height:3.5rem; text-align:center; text-decoration:none; display:block; border-radius:2em; font-size:1.5rem">
+    <a href="https://amzn.to/3BC6FMF" target="_blank"
+      style="background-image:url(./img/drones/d6mxwh6-ff14427e-8e59-4ed2-b421-78306032ed22.png); background-size:cover; background-position:center; background-repeat:no-repeat; color:rgb(0, 0, 0); height:6.5rem; line-height:3.5rem; text-align:center; text-decoration:none; display:block; border-radius:2em; font-size:1.5rem; color:aliceblue">
       Click Here For Amazing drones on Amazon!
     </a>
     <br>
@@ -2546,14 +2546,14 @@ limitations under the License.
       <figure class="ampstart-image-with-heading  m0 relative mb4">
         <a href="https://amzn.to/3BC6FMF" target="_blank">
 
-          <amp-img src="./img/drones/drone5field.jpg" width="285" height="285"
+          <amp-img src="./img/drones/drone3.jpg" width="285" height="285"
             alt="Dude with a beard wearing sunglasses and drones" layout="responsive"
             style="border-radius:2rem;"></amp-img>
         </a>
         <figcaption class="absolute right-0 bottom-0 left-0">
           <header class="ampstart-image-heading px2 py2 line-height-4">
             <h2 class="h3 bold"></h2><a href="https://amzn.to/3BC6FMF" target="_blank">
-              <p class="h4" style>Click Me for some fashion forward drones</p>
+              <p class="h4" style></p>
             </a>
           </header>
         </figcaption>
@@ -2562,80 +2562,7 @@ limitations under the License.
 
 
 
-      <p class="mb1">
-      </p>
 
-      <figure class="ampstart-image-with-heading  m0 relative mb4">
-        <a href="https://amzn.to/3BC6FMF" target="_blank">
-
-          <amp-img src="./img/drones/pexels-giannekarla-58592.jpg" width="285" height="190"
-            alt="Two women wearing drones" layout="responsive" style="border-radius:2rem;"></amp-img>
-        </a>
-        <figcaption class="absolute right-0 bottom-0 left-0">
-          <header class="ampstart-image-heading px2 py2 line-height-4">
-            <h2 class="h3 bold"></h2><a href="https://amzn.to/3BC6FMF" target="_blank">
-              <p class="h4" style>Click Me for some fashion forward drones</p>
-            </a>
-          </header>
-        </figcaption>
-      </figure>
-
-      <p class="mb1">
-      </p>
-
-
-      <figure class="ampstart-image-with-heading  m0 relative mb4">
-        <a href="https://amzn.to/3BC6FMF" target="_blank">
-
-          <amp-img src="./img/drones/pexels-dajana-reci-289671698-16643767.jpg" width="300" height="300"
-            alt="Woman walking in a green valley with mountains in the background" layout="responsive"
-            style="border-radius:2rem;"></amp-img>
-        </a>
-        <figcaption class="absolute right-0 bottom-0 left-0">
-          <header class="ampstart-image-heading px2 py2 line-height-4">
-            <h2 class="h3 bold"></h2><a href="https://amzn.to/3BC6FMF" target="_blank">
-              <p class="h4" style>Click Me for some outdoorsy drones</p>
-            </a>
-          </header>
-        </figcaption>
-      </figure>
-
-      <p class="mb1">
-      </p>
-      <p class="mb1">
-      </p>
-
-      <figure class="ampstart-image-with-heading  m0 relative mb4">
-        <a href="https://amzn.to/3BC6FMF">
-
-          <amp-img src="./img/drones/d2qv53d-c3d0fa99-c4d9-4694-ad43-007086f850ab.jpg" width="300" height="300"
-            alt="Big Guy" layout="responsive" style="border-radius:2rem;"></amp-img>
-        </a>
-        <figcaption class="absolute right-0 bottom-0 left-0">
-          <header class="ampstart-image-heading px2 py2 line-height-4">
-            <h2 class="h3 bold"></h2><a href="https://amzn.to/3BC6FMF">
-              <p class="h4" style="color:black">Click Me to Find Some Amazing Big & Tall drones!</p>
-            </a>
-          </header>
-        </figcaption>
-      </figure>
-
-      <figure class="ampstart-image-with-heading  m0 relative mb4">
-        <a href="https://amzn.to/3BC6FMF">
-
-          <amp-img src="./img/drones/11884158495_6136a39fba_b.jpg" width="600" height="450" alt="Lumberjack"
-            layout="responsive"></amp-img>
-        </a>
-        <figcaption class="absolute right-0 bottom-0 left-0">
-          <header class="ampstart-image-heading px2 py2 line-height-4">
-            <h2 class="h3 bold"></h2><a href="https://amzn.to/3BC6FMF">
-              <p class="h4">Click Me to Find Some Amazing drones!</p>
-            </a>
-          </header>
-        </figcaption>
-      </figure>
-    </article>
-  </main>
 
   <!-- Start Footer -->
   <footer class="ampstart-footer flex flex-column items-center px3 ">
