--- a/drones.html
+++ b/drones.html
@@ -1861,7 +1861,7 @@ limitations under the License.
       border-radius: 0;
       border-bottom: 1px solid #4a4a4a;
       background: none;
-      color: #4a4a4a;
+      color: #000000;
       outline: 0
     }
 
@@ -1968,7 +1968,7 @@ limitations under the License.
     .ampstart-input-chk,
     .ampstart-input-radio {
       width: auto;
-      color: #4a4a4a
+      color: #000000
     }
 
     .ampstart-input input[type=checkbox],
