--- a/chocolat.html
+++ b/chocolat.html
@@ -1857,9 +1857,9 @@ limitations under the License.
       line-height: 1.75;
       border: 0;
       border-radius: 0;
-      border-bottom: 1px solid #4a4a4a;
+      border-bottom: 1px solid #000;
       background: none;
-      color: #4a4a4a;
+      color: #000;
       outline: 0
     }
 
@@ -1966,7 +1966,7 @@ limitations under the License.
     .ampstart-input-chk,
     .ampstart-input-radio {
       width: auto;
-      color: #4a4a4a
+      color: #000
     }
 
     .ampstart-input input[type=checkbox],
@@ -2414,7 +2414,8 @@ limitations under the License.
         </header>
         <footer class="absolute left-0 right-0 bottom-0">
           <a href="https://www.kqzyfj.com/click-101316119-11430556">
-            <img src="https://www.ftjcfx.com/image-101316119-11430556" width="300" height="250" alt="glass of iced tea" border="0" /></a>
+            <img src="https://www.ftjcfx.com/image-101316119-11430556" width="300" height="250" alt="glass of iced tea"
+              border="0" /></a>
 
         </footer>
       </figcaption>
@@ -2441,7 +2442,8 @@ limitations under the License.
         ocean, creating moments that felt like pure inspiration. It's a real Boston tea party up in there.</p>
       <a href="https://www.kqzyfj.com/click-101316119-11430556">
 
-        <img src="./img/tea/pexels-pixabay-460257.webp" width="300" height="250" alt="woman drinking tea" border="0" /></a>
+        <img src="./img/tea/pexels-pixabay-460257.webp" width="300" height="250" alt="woman drinking tea"
+          border="0" /></a>
       <p class="mb1">
         In the winter, there's nothing better than a steaming cup of gourmet tea to warm you up on a chilly day or to
         reset and
