--- a/plaid.html
+++ b/plaid.html
@@ -1859,9 +1859,9 @@ limitations under the License.
       line-height: 1.75;
       border: 0;
       border-radius: 0;
-      border-bottom: 1px solid #4a4a4a;
+      border-bottom: 1px solid #000;
       background: none;
-      color: #4a4a4a;
+      color: #000;
       outline: 0
     }
 
@@ -1968,7 +1968,7 @@ limitations under the License.
     .ampstart-input-chk,
     .ampstart-input-radio {
       width: auto;
-      color: #4a4a4a
+      color: #000
     }
 
     .ampstart-input input[type=checkbox],
@@ -2444,11 +2444,12 @@ limitations under the License.
 
 
       <p class="mb1">
-        
+
 
 
       <p class="mb1">
-        <a href="https://amzn.to/4flohtS">Plaid shirts:</a> the timeless wardrobe staple that embodies comfort, style, and rugged charm. There’s
+        <a href="https://amzn.to/4flohtS">Plaid shirts:</a> the timeless wardrobe staple that embodies comfort, style,
+        and rugged charm. There’s
         something about the
         cozy embrace of a plaid flannel shirt that feels like a warm hug on a crisp day. Whether layered over a tee or
         buttoned
