--- a/blackdoves.html
+++ b/blackdoves.html
@@ -1853,9 +1853,9 @@ limitations under the License.
       line-height: 1.75;
       border: 0;
       border-radius: 0;
-      border-bottom: 1px solid #4a4a4a;
+      border-bottom: 1px solid #000;
       background: none;
-      color: #4a4a4a;
+      color: #000;
       outline: 0
     }
 
@@ -1962,7 +1962,7 @@ limitations under the License.
     .ampstart-input-chk,
     .ampstart-input-radio {
       width: auto;
-      color: #4a4a4a
+      color: #000
     }
 
     .ampstart-input input[type=checkbox],
