--- a/coffee.html
+++ b/coffee.html
@@ -1857,9 +1857,9 @@ limitations under the License.
       line-height: 1.75;
       border: 0;
       border-radius: 0;
-      border-bottom: 1px solid #4a4a4a;
+      border-bottom: 1px solid #000;
       background: none;
-      color: #4a4a4a;
+      color: #000;
       outline: 0
     }
 
@@ -1966,7 +1966,7 @@ limitations under the License.
     .ampstart-input-chk,
     .ampstart-input-radio {
       width: auto;
-      color: #4a4a4a
+      color: #000
     }
 
     .ampstart-input input[type=checkbox],
@@ -2406,7 +2406,7 @@ limitations under the License.
             <span class="ampstart-fullpage-hero-heading-text">
               <span class="h6 block caps" style="color:rgb(255, 255, 255)"></span><span class="h1 block bold caps my1"
                 style="color:rgb(253, 253, 253)">17 Easy & Affordable Coffee Drinks </span><span class="h6 block caps"
-                style="color:rgb(255, 255, 255);background-color:#4a4a4a ">Don't worry you're not a coffee snob. You
+                style="color:rgb(255, 255, 255);background-color:#000 ">Don't worry you're not a coffee snob. You
                 just like things that are good.</span>
             </span>
           </h1>
