--- a/drones.html
+++ b/drones.html
@@ -2504,14 +2504,15 @@ limitations under the License.
           </header>
         </figcaption>
       </figure>
-      <h2> What's All the Buzz About?</h2 <p class="mb1">
+      <h2> What's All the Buzz About?</h2>
+      <p class="mb1">
 
-      Let’s address the elephant—or rather, the drones—in the room. Recently, sightings have stirred everything from
-      government statements to wild speculations about *Project Blue Beam*. Whether it’s a UFO in Bedminster, New
-      Jersey, or a
-      drone crash in Hillsborough, these flying devices have become the subject of headlines and even conspiracy
-      theories. But
-      why fight the intrigue? If you can’t beat ’em, join ’em!
+        Let’s address the elephant—or rather, the drones—in the room. Recently, sightings have stirred everything from
+        government statements to wild speculations about *Project Blue Beam*. Whether it’s a UFO in Bedminster, New
+        Jersey, or a
+        drone crash in Hillsborough, these flying devices have become the subject of headlines and even conspiracy
+        theories. But
+        why fight the intrigue? If you can’t beat ’em, join ’em!
       </p>
       <p class="mb1">
         Drone technology is no longer confined to the pros. Accessible pricing and user-friendly controls mean
