--- a/blackdoves.html
+++ b/blackdoves.html
@@ -1472,7 +1472,7 @@ limitations under the License.
     }
 
     body {
-      background: #1d1d1d;
+      background: #000;
       color: #fff;
       font-family: Lora, serif;
       min-width: 315px;
@@ -2426,8 +2426,8 @@ limitations under the License.
         <figure class="ampstart-image-with-heading  m0 relative mb4">
           <a href="https://www.netflix.com/watch/81931248?trackId=251726442">
 
-            <amp-img src="./img/blackdoves/Black_Peace_Dove.svg.webp" width="670" height="599"
-              alt="Peace Dove" layout="responsive" style="background:#fff"></amp-img>
+            <amp-img src="./img/blackdoves/Black_Peace_Dove.svg.webp" width="670" height="599" alt="Peace Dove"
+              layout="responsive" style="background:#fff"></amp-img>
           </a>
           <figcaption class="absolute right-0 bottom-0 left-0">
             <header class="ampstart-image-heading px2 py2 line-height-4">
@@ -2464,7 +2464,8 @@ limitations under the License.
 
         If you're a fan of intense action and complex character dynamics, this could be a great series to check out!</p>
       <p class="mb1"><a href="https://www.kqzyfj.com/click-101316119-11430556">
-          <img src="https://www.ftjcfx.com/image-101316119-11430556" width="300" height="250" alt="glass of iced tea" border="0" /></a>
+          <img src="https://www.ftjcfx.com/image-101316119-11430556" width="300" height="250" alt="glass of iced tea"
+            border="0" /></a>
       </p>
 
     </article>
