--- a/tea.html
+++ b/tea.html
@@ -1476,7 +1476,7 @@ limitations under the License.
     }
 
     body {
-      background: #1d1d1d;
+      background: #000;
       color: #fff;
       font-family: Lora, serif;
       min-width: 315px;
