--- a/drones.html
+++ b/drones.html
@@ -2409,7 +2409,9 @@ limitations under the License.
             <span class="ampstart-fullpage-hero-heading-text">
               <span class="h6 block caps" style="color:rgb(255, 255, 255)"></span><span class="h1 block bold caps my1"
                 style="color:rgb(255, 255, 255); background-color:#000">Drones Over Us: </span><span
-                class="h6 block caps" style="color:rgb(255, 255, 255);background-color:#000">The Ultimate Holiday Gift
+                class="h6 block caps" style="color:rgb(255, 255, 255);background-color:#000; height:1.4rem; font-size:1.4rem; 
+  -ms-transform: translateY(-50%);
+  transform: translateY(-50%);">The Ultimate Holiday Gift
                 Soaring Into 2024</span>
             </span>
           </h1>
